--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -1,19 +1,46 @@
 <div id="sidebar">
-    <mat-nav-list>
+    <!-- <mat-nav-list> -->
         <!-- <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/features/phone']">
             <mat-icon>perm_phone_msg</mat-icon> Phone Auth
         </a> -->
-        <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/features/users']">
-            <mat-icon class="users-icon">people</mat-icon> {{'Users' | translate}}
-        </a>
+       
+
+      
         <!-- <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/features/user']">
             <mat-icon>how_to_reg</mat-icon> One User
         </a>
         <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/features/cud']">
             <mat-icon>drag_indicator</mat-icon> Crud
         </a> -->
+        <!-- <a mat-list-item *ngFor="let item of menuItems" [routerLinkActive]="'active'" [routerLink]="item.url">
+            <mat-icon class="users-icon">{{item.icon}}</mat-icon> {{item.name | translate}}
+        </a>
+
+        <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/features/users']">
+            <mat-icon class="users-icon">people</mat-icon> {{'Users' | translate}}
+        </a>
         <a mat-list-item [routerLinkActive]="'active'" [routerLink]="['/management/AccessRules']">
             <mat-icon>drag_indicator</mat-icon> Access Rules
         </a>
-    </mat-nav-list>
+    </mat-nav-list> -->
+
+
+      <ul class="menu-ul">
+          <li *ngFor="let item of menuItems" [routerLink]="[item.url]">
+            <mat-icon>{{item.icon}}</mat-icon>
+            <span [routerLink]="[item.url]"> {{item.name}} </span> 
+             <mat-icon class="ltr-mat-icon" *ngIf="item.children" (click)="item.collapsed=true" [hidden]="item.collapsed">keyboard_arrow_right</mat-icon>
+             <mat-icon class="rtl-mat-icon" *ngIf="item.children" (click)="item.collapsed=true" [hidden]="item.collapsed">keyboard_arrow_left</mat-icon>
+             <mat-icon *ngIf="item.children && item.collapsed"  (click)="item.collapsed=false" >keyboard_arrow_down</mat-icon>
+                <ul *ngIf="item.children && item.collapsed" class="childernUl">
+                    <li  *ngFor="let subItem of item.children" class="subItem" [routerLink]="[subItem.url]" 
+                    (click)="toggleSelected(subItem)"
+                    [class.selected]="subItem.selected">
+                        <mat-icon>{{subItem.icon}}</mat-icon>
+                        <span [routerLink]="[subItem.url]">{{subItem.name}} </span> 
+                    </li>
+                </ul>
+            </li>
+         
+      </ul>
 </div>
