--- a/src/app/layout/components/topnav/topnav.component.scss
+++ b/src/app/layout/components/topnav/topnav.component.scss
@@ -43,3 +43,10 @@
         display: none;
     }
 }
+
+#sidebar.hide{
+    transform: translate3d(-100%, 0, 0);
+}
+#sidebar.show{
+    transform: none;
+}
