--- a/src/app/features/components/users/users-list.component.html
+++ b/src/app/features/components/users/users-list.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-between align-items-center my-3">
+<div class="d-flex justify-content-between align-items-center my-3 header">
     <strong>{{"Users" | translate}}</strong>
     <button mat-raised-button color="primary" class="w-30"
     routerLink="/features/UserForm">
@@ -39,4 +39,3 @@
       
     </div>
 </div>
-
