--- a/src/app/layout/components/sidebar/sidebar.component.scss
+++ b/src/app/layout/components/sidebar/sidebar.component.scss
@@ -8,6 +8,9 @@
     z-index: 999;
     -ms-overflow-y: auto;
     overflow-y: auto;
+    background-image: url(https://platform.ucx.zone/auth-bg-1.8184142c45a47fd52a9c.jpg);
+    background-position: right;
+    background-size: cover;
     .mat-nav-list {
         width: 100%;
         a {
@@ -16,6 +19,36 @@
             }
             display: block;
         }
+    }
+    ul{
+        padding-left: 10px;
+        margin-top: 20px;
+        li:not(.subItem){
+            margin: 10px 0;
+        }
+        .childernUl{
+        margin-top: 5px;
+        }
+        cursor: pointer;
+       li.subItem{
+        margin-right: 10px;
+        padding: 5px;
+        &:hover{
+         background-color: aliceblue;
+         
+        }
+       }
+       li.selected{
+        // background-color: gainsboro;
+        background-color: aliceblue;
+        box-shadow: 0 0 2px;
+        color: #3f51b5;
+        border-radius: 15px;
+       }
+    mat-icon{
+        color: #16215c ;
+        margin: 0 5px;
+    }
     }
 }
 .nested-menu {
@@ -41,8 +74,40 @@
         }
     }
 }
-@media screen and (max-width: 992px) {
-    #sidebar {
-        left: -250px;
+
+    @media screen and (max-width: 992px) {
+        #sidebar {
+            visibility: hidden;
+        }
     }
-}
+
+
+    @media screen and (max-width: 992px) {
+        #sidebar.push-right {
+            visibility: visible;
+
+        }
+    }
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #9a9ca5; 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #3f51b5; 
+  }
