--- a/src/app/management-system/components/access-rules/access-rules.component.html
+++ b/src/app/management-system/components/access-rules/access-rules.component.html
@@ -1,4 +1,5 @@
-<div class="d-flex justify-content-between align-items-center my-3">
+
+<div class="d-flex justify-content-between align-items-center my-3 header">
     <strong>{{"AccessRulesAndIt'sPermissions" | translate}}</strong>
     <button mat-raised-button color="primary" class="w-30"
     routerLink="/management/AccessRuleForm">
