--- a/src/app/shared/components/mat-table/mat-table.component.html
+++ b/src/app/shared/components/mat-table/mat-table.component.html
@@ -12,17 +12,41 @@
             <ng-container matColumnDef="actions">
                 <th mat-header-cell *matHeaderCellDef class="text-center">Actions </th>
                 <td mat-cell *matCellDef="let element" class="text-center">    
-                
-                    <button mat-raised-button color="primary" class="w-30 mx-2" (click)="ViewPermissions(element)">
+                  
+                    <div class="btn-group visible-md" dropdown #dropdown="bs-dropdown" [autoClose]="true">
+                        <button id="button-basic" dropdownToggle type="button" 
+                           class="btn btn-light dropdown-toggle"
+                           aria-controls="dropdown-basic">
+                        </button>
+                        <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu"
+                           role="menu" aria-labelledby="button-basic">
+                           <li role="menuitem">
+                               <a class="dropdown-item" href="javascript:void(0)" (click)="ViewPermissions(element)">   
+                               <mat-icon>remove_red_eye</mat-icon>
+                                 {{'ViewPermissions' | translate}}
+                                </a>
+                            </li>
+                           <li role="menuitem"><a class="dropdown-item" href="javascript:void(0)" (click)="editRoles(element)"> 
+                               <mat-icon>edit</mat-icon>
+                            {{'Edit' | translate}}</a></li>
+                           <li class="divider dropdown-divider"></li>
+                           <li role="menuitem"><a class="dropdown-item text-danger" href="javascript:void(0)" (click)="openDeleteDialog(element.id)"> 
+                            <mat-icon> cancel_presentation</mat-icon>
+                            {{'Delete' | translate}}</a></li>
+                         
+                        </ul>
+                      </div>
+                   
+                    <button mat-raised-button color="primary" class="w-30 mx-2 visible-lg" (click)="ViewPermissions(element)">
                         <mat-icon>remove_red_eye</mat-icon>
 
                      {{'ViewPermissions' | translate}}
                     </button>
-                    <button mat-raised-button color="primary" class="w-30 mx-2" (click)="editRoles(element)">
+                    <button mat-raised-button color="primary" class="w-30 mx-2 visible-lg" (click)="editRoles(element)">
                     <mat-icon>edit</mat-icon>
                      {{'Edit' | translate}}
                     </button>
-                    <button mat-raised-button color="accent" class="w-30 " (click)="openDeleteDialog(element.id)">
+                    <button mat-raised-button color="accent" class="w-30 visible-lg" (click)="openDeleteDialog(element.id)">
                         <mat-icon> cancel_presentation</mat-icon>
                         {{'Delete' | translate}}
                        </button>
