--- a/src/app/features/components/users-list-mat-table/users-list-mat-table.component.html
+++ b/src/app/features/components/users-list-mat-table/users-list-mat-table.component.html
@@ -35,28 +35,28 @@
         <th mat-header-cell *matHeaderCellDef class="text-center">Actions </th>
         <td mat-cell *matCellDef="let element" class="text-center">    
         
-            <button mat-raised-button color="primary" class="w-30 mx-2" *ngIf="element.status ==3" 
-            (click)="editUser(element)">
+            <button mat-raised-button color="primary" class="w-30 mx-2" 
+            (click)="editUser(element)" *ngIf="share.getBtnGuard('UsersList','Insert') && element.status ==3">
             <mat-icon>edit</mat-icon>
              {{'Edit' | translate}}
             </button>
-            <button mat-raised-button color="accent" class="w-30 mx-2" *ngIf="element.status ==5" 
-            (click)="addRoleToUserBeforeApprove(element.id,Enum.approved)">
+            <button mat-raised-button color="accent" class="w-30 mx-2" 
+            (click)="addRoleToUserBeforeApprove(element.id,Enum.approved)" *ngIf="share.getBtnGuard('UsersList','Insert') && element.status ==5">
             <mat-icon>check_circle</mat-icon>
              {{'Approve' | translate}}
             </button>
-            <button mat-raised-button color="warn" class="w-30 mx-2" *ngIf="element.status ==5" 
-            (click)="updateUserStatus(element.id,Enum.rejected)">
+            <button mat-raised-button color="warn" class="w-30 mx-2"  
+            (click)="updateUserStatus(element.id,Enum.rejected)" *ngIf="share.getBtnGuard('UsersList','Insert') && element.status ==5">
                 <mat-icon>delete_forever</mat-icon>
              {{'Reject' | translate}}
             </button>
-            <button mat-raised-button color="primary" class="w-30 mx-2" *ngIf="element.status ==4" 
-            (click)="updateUserStatus(element.id,Enum.pending)">
+            <button mat-raised-button color="primary" class="w-30 mx-2" 
+            (click)="updateUserStatus(element.id,Enum.pending)" *ngIf="share.getBtnGuard('UsersList','Insert') && element.status ==4">
             <mat-icon>history</mat-icon>
              {{'Undo' | translate}}
             </button>
-            <button mat-raised-button color="accent" class="w-30 " *ngIf="element.status ==3" 
-            (click)="openDeleteDialog(element.id)">
+            <button mat-raised-button color="accent" class="w-30 " 
+            (click)="openDeleteDialog(element.id)" *ngIf="share.getBtnGuard('UsersList','Insert') && element.status ==3">
                 <mat-icon> cancel_presentation</mat-icon>
                 {{'Delete' | translate}}
                </button>
