--- a/src/app/features/components/users/users-list.component.html
+++ b/src/app/features/components/users/users-list.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-between align-items-center my-3 header">
     <strong>{{"Users" | translate}}</strong>
     <button mat-raised-button color="primary" class="w-30"
-    routerLink="/features/UserForm">
+    routerLink="/features/UserForm" *ngIf="share.getBtnGuard('UsersList','Insert')">
     <mat-icon>add_circle</mat-icon> 
     {{'AddNewUser' | translate}}
     </button>
