--- a/src/app/management-system/components/access-rules/access-rules.component.html
+++ b/src/app/management-system/components/access-rules/access-rules.component.html
@@ -1,7 +1,7 @@
 
 <div class="d-flex justify-content-between align-items-center my-3 header">
     <strong>{{"AccessRulesAndIt'sPermissions" | translate}}</strong>
-    <button mat-raised-button color="primary" class="w-30"
+    <button mat-raised-button color="primary" class="w-30" *ngIf="share.getBtnGuard('AccessRules','Insert')"
     routerLink="/management/AccessRuleForm">
     <mat-icon>add_circle</mat-icon> 
     {{'AddNewAccessRule' | translate}}
