--- a/src/app/layout/components/sidebar/sidebar.component.scss
+++ b/src/app/layout/components/sidebar/sidebar.component.scss
@@ -11,6 +11,8 @@
     background-image: url(https://platform.ucx.zone/auth-bg-1.8184142c45a47fd52a9c.jpg);
     background-position: right;
     background-size: cover;
+    user-select: none;
+
     .mat-nav-list {
         width: 100%;
         a {
@@ -23,8 +25,11 @@
     ul{
         padding-left: 10px;
         margin-top: 20px;
+        user-select: none;
+
         li:not(.subItem){
             margin: 10px 0;
+            
         }
         .childernUl{
         margin-top: 5px;
