--- a/src/app/projects/componenets/project-form/project-form.component.html
+++ b/src/app/projects/componenets/project-form/project-form.component.html
@@ -1,1 +1,125 @@
-<p>project-form works!</p>
+<div class="card">
+    <div class="card-header">
+        <strong>{{"AddCategoryAndItsSubs" | translate }}</strong>
+    </div>
+    <div class="card-body">
+        <form [formGroup]="projectsForm">
+            <ng-container formArrayName="categories">
+              <section class="col-md-10 categories-grid" *ngFor="let p of projects().controls ; let projectIndex = index">
+                <ng-container [formGroupName]="projectIndex">
+                    <section class="col-md-12">
+                        <div class="row">
+                          <div class="counter">
+                            <strong>{{projectIndex+1}}</strong>
+                          </div>
+                          <div class="col-md-4">
+                            <em class="text-danger">*</em>
+                            <label for="name">{{'Name' | translate}}</label>
+                            <input
+                              type="text"
+                              class="form-control"
+                              id="name"
+                              placeholder="Enter project name"
+                              formControlName="name"
+                            />
+                          </div>
+                          <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
+                            <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle matTreeNodePadding>
+                              <button mat-icon-button disabled></button>
+                              <mat-checkbox class="checklist-leaf-node"
+                                            [checked]="checklistSelection.isSelected(node)"
+                                            (change)="todoLeafItemSelectionToggle(node)">{{node.item}}</mat-checkbox>
+                            </mat-tree-node>
+                        </mat-tree>
+                          <div class="col-md-4">
+                            <label for="category">{{'Category' | translate}}</label>
+                            <select name="" id=""></select>
+                         
+                            <input
+                              type="text"
+                              class="form-control"
+                              id="category"
+                              placeholder="Enter Category"
+                              formControlName="category"
+                
+                            />
+                          </div>
+                          <div class="col-md-4">
+                            <label for="description">{{'Description' | translate}}</label>
+                            <input
+                              type="text"
+                              class="form-control"
+                              id="description"
+                              placeholder="Enter Category description"
+                              formControlName="description"
+                
+                            />
+                          </div>
+                          <div class="col-md-3 buttons">
+                                 <mat-icon (click)="addCategory(projectIndex+1)" class="addIcon">add_circle</mat-icon> 
+                              
+                                  <mat-icon  (click)="deleteCategory(projectIndex)" class="deleteIcon">delete_forever</mat-icon>
+              
+                            
+                          </div>
+                        </div>
+                     </section>
+                  <ng-container formArrayName="sub">
+                    <section class="col-md-10 child"  *ngFor="let sub of sub(projectIndex).controls; let subIndex=index">
+                        <div class="row">
+                            <ng-container [formGroupName]="subIndex">
+                              <div class="counter">
+                                <strong>{{subIndex+1}}</strong>
+                              </div>
+                            <div class="col-md-4">
+                              <em class="text-danger">*</em>
+                              <label for="name">{{'Name' | translate}}</label>
+                              <input
+                                type="text"
+                                class="form-control"
+                                id="name"
+                                placeholder="Enter sub category name"
+                                formControlName="name"
+                              />
+                            </div>
+                            <div class="col-md-4">
+                              <label for="description">{{'Description' | translate}}</label>
+                              <input
+                                type="text"
+                                class="form-control"
+                                id="description"
+                                placeholder="Enter sub category description"
+                                formControlName="description"
+                              />
+                            </div>
+                            <div class="col-md-3 buttons">
+                                    <mat-icon (click)="addSubCategory(projectIndex)" class="addIcon">add_circle</mat-icon> 
+                              
+                                    <mat-icon  (click)="deleteSubCategory(projectIndex,subIndex)" class="deleteIcon">delete_forever</mat-icon>
+                
+                            </div>
+                            </ng-container>
+                        </div>
+                    </section>
+                  </ng-container>
+                </ng-container>
+              </section>
+          </ng-container>
+          <div class="form-row action-btn-container">
+            <button mat-raised-button color="primary" class="w-30"
+            (click)="cancel()">
+            <mat-icon> cancel_presentation</mat-icon>
+            {{'Cancel' | translate}}
+           </button>
+            <button mat-raised-button color="primary" class="w-30"
+             (click)="submitForm()" [disabled]="checkDisable()">
+             <mat-icon>add_circle</mat-icon> 
+             {{'Save' | translate}}
+            </button>
+        
+           </div>
+            </form>
+    </div>
+</div>
+
+    
